Fixed background-image problem on mobile

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -43,8 +43,7 @@ hr {
     background-image: url("/images/pagebackground.jpg");
     background-position-y: -900px;
     margin: 0 0 36px;
-
-    //  background-size:100%;
+    background-size:cover;
     background-repeat: no-repeat;
     background-position: bottom;
     .title {
